--- a/Pages/badges/All.cshtml
+++ b/Pages/badges/All.cshtml
@@ -5,28 +5,33 @@
     ViewData["Title"] = "All Badges";
 }
 
-<h1>All Available Badges</h1>
+<div class="row float">
+    <div class="col-md-8 col-sm-1">
+        <h1>All Available Badges</h1>
+    </div>
+    <div class="col-md-4 col-sm-1 float">
+        <a asp-page="Create" class="btn btn-primary float-md-end float-sm-none">Create New</a>
+    </div>
+</div>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Badge[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Badge[0].Description)
-            </th>
-            <th>
-                Badge Type
-            </th>
-            <th></th>
-        </tr>
+    <thead class="thead-dark">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Badge[0].Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Badge[0].Description)
+        </th>
+        <th>
+            Badge Type
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Badge) {
+    @foreach(var item in Model.Badge)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -38,11 +43,13 @@
                 @Html.DisplayFor(modelItem => item.BadgeType.Name)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-page="./Share" asp-route-id="@item.Id">Share</a>
+                <div class="btn-group" role="group" aria-label="Actions">
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-secondary">Edit</a>
+                    <a asp-page="./Share" asp-route-id="@item.Id" class="btn btn-secondary">Share</a>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                </div>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
