--- a/Pages/badges/Create.cshtml
+++ b/Pages/badges/Create.cshtml
@@ -8,28 +8,29 @@
 <h1>Create</h1>
 
 <h4>Badge</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Badge.Name" class="control-label"></label>
-                <input asp-for="Badge.Name" class="form-control" />
+                <input asp-for="Badge.Name" class="form-control"/>
                 <span asp-validation-for="Badge.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Badge.BadgeType" class="control-label"></label>
                 <select class="form-select" name="badgeTypeId"
-                    asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))"></select>
+                        asp-items="@(new SelectList(Model.BadgeTypes, "Id", "Name"))">
+                </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Next >" class="btn btn-primary" />
+                <input type="submit" value="Next >" class="btn btn-primary"/>
             </div>
         </form>
     </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
