--- a/Pages/badges/Index.cshtml
+++ b/Pages/badges/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
+@using BadgeMeUp.Pages.Shared
 @model BadgeMeUp.Pages.Badges.IndexModel
 
 @{
-    if (Model.OtherUser == null)
+    if(Model.OtherUser == null)
     {
         ViewData["Title"] = "My Badges";
     }
@@ -12,7 +13,7 @@
     }
 }
 
-@if (@Model.OtherUser == null)
+@if(Model.OtherUser == null)
 {
     <h2>Your Badges</h2>
 
@@ -23,7 +24,7 @@
 }
 else
 {
-     <h2>Badges belonging to @Model.OtherUser</h2>
+    <h2>Badges belonging to @Model.OtherUser</h2>
 }
 
 <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
@@ -34,7 +35,7 @@ else
         @foreach(var assignedBadge in Model.AssignedBadges)
         {
             <div class="col-sm-5 col-lg-3 mb-2">
-                    <partial name="BadgeWidget" model="@(new BadgeMeUp.Pages.Shared.BadgeWidget(assignedBadge.Badge, true))" />
+                <partial name="BadgeWidget" model="@(new BadgeWidget(assignedBadge.Badge))"/>
             </div>
         }
     </div>
