Removed about, moved to index

--- a/Pages/badges/All.cshtml
+++ b/Pages/badges/All.cshtml
@@ -14,19 +14,19 @@
     </div>
 </div>
 
-<table class="table">
+<table class="table table-hover">
     <thead class="thead-dark">
     <tr>
-        <th>
+        <th scope="col">
             @Html.DisplayNameFor(model => model.Badge[0].Name)
         </th>
-        <th>
+        <th scope="col">
             @Html.DisplayNameFor(model => model.Badge[0].Description)
         </th>
-        <th>
+        <th scope="col">
             Badge Type
         </th>
-        <th></th>
+        <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
