--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,23 +2,91 @@
 @using Humanizer
 @model IndexModel
 @{
-    ViewData["Title"] = "Badge Stream";
+    ViewData["Title"] = "Welcome";
 }
 
-<div class="text-center">
-    <h2>Latest Activity</h2>
-    @foreach(var assignedBadge in Model.BadgeAssignments)
-    {
-        <div>
-            <b>
-                <a asp-page="badges/Index" asp-route-id="@assignedBadge.User.PrincipalId">@assignedBadge.User.PrincipalName</a>
-            </b>
-            received the
-            <b>
-                <a asp-page="badges/Edit" asp-route-id="@assignedBadge.Badge.Id">@assignedBadge.Badge.Name</a>
-            </b>
-            badge
-            @assignedBadge.DateAssigned.Humanize()
+<div class="container">
+
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">See what others are earning</h2>
+            <p>
+                Check out what others are earning, and view a badge details to check
+                out everyone that has earned a badge.
+            </p>
         </div>
-    }
+        <div class="col-md-7 ps-md-5">
+            @foreach(var assignedBadge in Model.BadgeAssignments)
+            {
+                <div>
+                    <b>
+                        <a asp-page="badges/Index" asp-route-id="@assignedBadge.User.PrincipalId">@assignedBadge.User.PrincipalName</a>
+                    </b>
+                    received the
+                    <b>
+                        <a asp-page="badges/Edit" asp-route-id="@assignedBadge.Badge.Id">@assignedBadge.Badge.Name</a>
+                    </b>
+                    badge
+                    @assignedBadge.DateAssigned.Humanize()
+                </div>
+            }
+        </div>
+    </section>
+
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">Badge Types</h2>
+            <p>
+                Badges can be fun like "Wall of Guitars" or "Designer glasses". Badges can also
+                be skill-based, like "Azure Functions" or "Certified Kubernetes Administrator".
+            </p>
+        </div>
+        <div class="col-md-7 ps-md-5">
+            <img src="~/images/badge-types.png"/>
+        </div>
+    </section>
+
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">Show off your badges</h2>
+            <p>
+                Share a link to your badges in your email signature or your bio.
+            </p>
+            <p>
+                You earned them, now show them off proudly!
+            </p>
+        </div>
+        <div class="col-md-7 ps-md-5">
+            <img src="~/images/my-badges.png"/>
+        </div>
+    </section>
+
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">Great for events!</h2>
+            <p>
+                When you share a badge, you can send it to everyone that attended an event. When
+                they click the link, they're able to accept the badge and it's added to their wall.
+            </p>
+        </div>
+        <div class="col-md-7 ps-md-5">
+            <img src="~/images/badge-accept.png"/>
+        </div>
+    </section>
+
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">Anyone can create or share</h2>
+            <p>
+                Anyone can create or share a badge. We're counting on you to remain
+                respectful and honest about who deserves a badge.
+            </p>
+            <p>
+                You can include a personalized message when sharing a badge.
+            </p>
+        </div>
+        <div class="col-md-7 ps-md-5">
+            <img src="~/images/badge-share.png"/>
+        </div>
+    </section>
 </div>
