--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,13 +6,29 @@
 }
 
 <div class="container">
-
+    <section class="row mb-5 pb-md-4">
+        <div class="col-md-5">
+            <h2 class="display-5 fw-normal">Welcome to BadgeMeUp!</h2>
+            <p>
+                BadgeMeUp is a platform to engage with and empower your fellow colleagues,
+                giving recognition for skills, activities, and more! 
+            </p>
+        </div>
+        <div class="col-md-7 ps-md-5 d-flex justify-content-center">
+            <img src="/images/logo-dark.svg" id="logo" alt="BadgeMeUp Logo" title="BadgeMeUp" class="mw-100 w-75 h-auto" />
+        </div>
+    </section>
     <section class="row mb-5 pb-md-4">
         <div class="col-md-5">
             <h2 class="display-5 fw-normal">See what others are earning</h2>
             <p>
                 Check out what others are earning, and view a badge details to check
                 out everyone that has earned a badge.
+            </p>
+            <p>
+                See the <a asp-page="Activity">activity stream</a> for the latest badges
+                earned or the <a asp-page="Leaderboard">leaderboard</a> to see who has
+                given or received the most!
             </p>
         </div>
         <div class="col-md-7 ps-md-5">
