--- a/Pages/Activity.cshtml
+++ b/Pages/Activity.cshtml
@@ -1,19 +1,23 @@
 @page
-@model BadgeMeUp.Pages.Activity
-
+@using Humanizer
+@model IndexModel
 @{
-    Layout = null;
+    ViewData["Title"] = "Latest Activity";
 }
 
-<!DOCTYPE html>
+<h1>Latest Activity</h1>
 
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-<div>
-    
-</div>
-</body>
-</html>
+@foreach(var assignedBadge in Model.BadgeAssignments)
+{
+    <div>
+        <b>
+            <a asp-page="badges/Index" asp-route-id="@assignedBadge.User.PrincipalId">@assignedBadge.User.PrincipalName</a>
+        </b>
+        received the
+        <b>
+            <a asp-page="badges/Edit" asp-route-id="@assignedBadge.Badge.Id">@assignedBadge.Badge.Name</a>
+        </b>
+        badge
+        @assignedBadge.DateAssigned.Humanize()
+    </div>
+}
