--- a/Pages/Leaderboard.cshtml
+++ b/Pages/Leaderboard.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Leaderboards";
 }
 
+<h1>Leaderboard</h1>
+
 <div class="row">
     <div class="col">
         <h5>Received</h5>
