--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-page="/">Welcome</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-page="/badges/Index">My Badges</a>
                     </li>
                     <li class="nav-item">
@@ -33,6 +36,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-page="/badges/All">All Badges</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-page="/Activity">Activity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-page="/Leaderboard">Leaderboard</a>
                     </li>
                 </ul>
             </div>
