--- a/Pages/badges/Index.cshtml
+++ b/Pages/badges/Index.cshtml
@@ -30,7 +30,7 @@ else
 <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 
-<div class="grid">
+<div class="grid badge-list">
     <div class="row" id="masonry">
         @foreach(var assignedBadge in Model.AssignedBadges)
         {
