--- a/Pages/badges/Edit.cshtml
+++ b/Pages/badges/Edit.cshtml
@@ -39,6 +39,12 @@
                 <input type="file" asp-for="badgeImage" accept="image/*"/>
                 <span asp-validation-for="badgeImage" class="text-danger"></span>
             </div>
+            @* TODO: enable this when we get migrations working *@
+            @* <div class="form-group"> *@
+            @*     <label asp-for="Badge.HideTitleOverlay" class="control-label"></label> *@
+            @*     <input type="checkbox" asp-for="Badge.HideTitleOverlay" class="form-control" /> *@
+            @*     <span asp-validation-for="Badge.HideTitleOverlay" class="text-danger"></span> *@
+            @* </div> *@
             <div class="form-group">
                 <input type="submit" value="Update" class="btn btn-primary"/>
                 <a asp-page="./Delete" asp-route-id="@Model.Badge.Id" class="btn btn-danger">Delete</a>
