Adding friendly description to badge

--- a/Pages/Shared/BadgeWidget.cshtml
+++ b/Pages/Shared/BadgeWidget.cshtml
@@ -13,7 +13,7 @@
     <div class="card-body text-center">
         <h5 class="card-title">@Model.Badge.Name</h5>
         <p class="card-text">
-            @Html.Raw(IndexModel.EncodeMultilineString(Model.Badge.Description))
+            @Html.Raw(IndexModel.EncodeMultilineString(Model.FriendlyDescription))
         </p>
 
 
